--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./rune.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,20 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Breathing App</title>
+    			<link
+				href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+				rel="stylesheet"
+			></link>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <audio id="soundIn" src="./sounds/Small-Tom-Drum-Hit-Level-2A-www.fesliyanstudios.com.mp3"></audio>
+    <audio id="soundOut" src="./sounds/Floor-Tom-Drum-Hit-Level-1A-www.fesliyanstudios.com (mp3cut.net).mp3"></audio>
+    <audio id="soundHold" src="./sounds/Bass-Drum-Hit-Level-1b-www.fesliyanstudios.com (mp3cut.net).mp3"></audio>
+    <audio id="soundRecover" src="./sounds/China-Cymbal-Crash-Level-1A-www.fesliyanstudios.com.mp3"></audio>
   </body>
 </html>
